connect to MongoDB

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -77,13 +77,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :channel_buy_price %>
-    <%= form.text_field :channel_buy_price %>
+    <%= form.label :channel_buy_price_egst %>
+    <%= form.text_field :channel_buy_price_egst %>
   </div>
 
   <div class="field">
-    <%= form.label :channel_MKT_rebate %>
-    <%= form.text_field :channel_MKT_rebate %>
+    <%= form.label :channel_mkt_rebate_egst %>
+    <%= form.text_field :channel_mkt_rebate_egst %>
   </div>
 
   <div class="field">
