--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -44,8 +44,8 @@
         <td><%= product.margin_rate %></td>
         <td><%= product.total_profit %></td>
         <td><%= product.retail_price %></td>
-        <td><%= product.channel_buy_price %></td>
-        <td><%= product.channel_MKT_rebate %></td>
+        <td><%= product.channel_buy_price_egst %></td>
+        <td><%= product.channel_mkt_rebate_egst %></td>
         <td><%= product.saa %></td>
         <td><%= product.rcm %></td>
         <td><%= product.ce %></td>
