--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -67,12 +67,12 @@
 
 <p>
   <strong>Channel buy price:</strong>
-  <%= @product.channel_buy_price %>
+  <%= @product.channel_buy_price_egst %>
 </p>
 
 <p>
   <strong>Channel mkt rebate:</strong>
-  <%= @product.channel_MKT_rebate %>
+  <%= @product.channel_mkt_rebate_egst %>
 </p>
 
 <p>
