--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>PmMongodb</title>
+<html class="antialiased">
+  <% render "shared/head" %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
@@ -10,9 +10,13 @@
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  </head>
 
   <body>
-    <%= yield %>
+    <%#= yield %>
+    <%= render "shared/header" %>
+    
+    <main class="px-4 lg:px-10">
+      <%= content_for?(:content) ? yield(:content) : yield %>
+    </main>
   </body>
 </html>
