--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,111 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<!--header class="bg-white shadow">
+  <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+    <h1 class="text-3xl font-bold text-gray-900">
+      Products
+    </h1>
+  </div>
+</header-->
+
+<br>
+<h1 class="text-3xl text-gary-900 font-bold">Products</h1>
+<br>
+
+<!-- This example requires Tailwind CSS v2.0+ -->
+<div class="flex flex-col">
+  <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+        <table class="min-w-full divide-y divide-gray-200">
+          <thead class="bg-gray-50">
+            <tr>
+              <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Brand
+              </th>
+
+              <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Category
+              </th>
+
+              <th scope="col" class="px-2 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Product Name
+              </th>
+
+              <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                SPS SKU
+              </th>
+
+              <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Vender SKU
+              </th>
+
+              <!--th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Marketing Name
+              </th-->
+
+              <!--th scope="col" class="px-6 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Description
+              </th-->
+
+              <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Retail Price
+              </th>
+
+              <!--th scope="col" class="relative px-3 py-3">
+                <span class="sr-only">Edit</span>
+              </th-->
+            </tr>
+          </thead>
+          <tbody class="bg-white divide-y divide-gray-200">
+            <% @products.each do |product| %>
+              <tr onclick="window.location.href='/products/<%= product.id.to_s %>'" style="cursor:pointer">
+                <td class="px-4 py-4 whitespace-nowrap">
+                  <div class="flex items-center">
+                    <!--div class="flex-shrink-0 h-10 w-10">
+                      <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
+                    </div-->
+                    <!--div class="ml-4"-->
+                      <div class="text-sm font-medium text-gray-900">
+                        <%= product.brand %>
+                      </div>
+                      <!--div class="text-sm text-gray-500">
+                        jane.cooper@example.com
+                      </div-->
+                    <!--/div-->
+                  </div>
+                </td>
+                <td class="px-4 py-4 whitespace-nowrap">
+                  <div class="text-sm text-gray-900"><%= product.category %></div>
+                  <!--div class="text-sm text-gray-500">Optimization</div-->
+                </td>
+                <td class="px-2 py-4 whitespace-nowrap">
+                  <div class="text-sm text-gray-900"><%= product.product_name %></div>
+                </td>
+                <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
+                  <%= product.sps_sku %>
+                </td>
+                <td class="px-4 py-4 whitespace-nowrap text-sm text-gray-500">
+                  <%= product.vender_sku %>
+                </td>
+                <!--td class="px-6 py-3 text-sm text-gray-500 ">
+                  <%= product.description %>
+                </td-->
+                <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
+                  $<%= product.retail_price %>
+                </td>
+                <!--td class="px-2 py-4 whitespace-nowrap text-right text-sm font-medium">
+                  <%= link_to 'Edit', edit_product_path(product), class: "text-indigo-600 hover:text-indigo-900" %>
+                </td-->
+              </tr>
+              <% end %>
+            <!-- More items... -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 
 <table>
   <thead>
