finish form view

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Editing Product</h1>
+<br>
+<h1 class="text-3xl text-gary-900 font-bold">Editing Product</h1>
+<br>
 
 <%= render 'form', product: @product %>
 
