--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Product</h1>
+<br>
+<h1 class="text-3xl text-gary-900 font-bold">New Product</h1>
+<br>
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Back', products_path %>
+<!--%= link_to 'Back', products_path %-->
