--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -4,5 +4,5 @@
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
+<!--%= link_to 'Show', @product %> |
 <%= link_to 'Back', products_path %>
