--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,14 +2,34 @@
 
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="bg-white shadow overflow-hidden sm:rounded-lg">
-  <div class="px-4 py-5 sm:px-6">
-    <h3 class="text-lg leading-6 font-medium text-gray-900">
-      Product Information
-    </h3>
-    <p class="mt-1 max-w-2xl text-sm text-gray-500">
-      Details and application.
-    </p>
+  
+  <div class="lg:flex lg:items-center lg:justify-between">
+    <div class="flex-1 min-w-0 px-4 py-5 sm:px-6">
+      <h3 class="text-lg leading-6 font-medium text-gray-900">
+         Product Information
+      </h3>
+      <p class="mt-1 max-w-2xl text-sm text-gray-500">
+        Details and application.
+      </p>
+    </div>
+    <div class="mt-5 flex lg:mt-0 lg:ml-4">
+      <span class="hidden sm:block">
+        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <!-- Heroicon name: solid/pencil -->
+          <svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+          </svg>
+          <%= link_to 'Edit', edit_product_path(@product) %>
+        </button>  
+      </span>
+
+      <span class="hidden sm:block ml-3 mr-3">
+        <%= link_to 'Back', products_path, class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+      </span>
+      
+    </div>
   </div>
+
   <div class="border-t border-gray-200">
     <dl>
       <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
@@ -333,9 +353,6 @@
   <%= @product.active %>
 </p-->
 
-<br>
 
-<%= link_to 'Edit', edit_product_path(@product), class: " btn mr-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %> |
-<%= link_to 'Back', products_path, class: " btn ml-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
-
-</br>
+<!--%= link_to 'Edit', edit_product_path(@product), class: " btn mr-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %> |
+<!%= link_to 'Back', products_path, class: " btn ml-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %-->
