--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,8 +1,7 @@
-<br>
-<h1 class="text-3xl text-gary-900 font-bold">Editing Product</h1>
-<br>
+
+<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Editing Product</h1>
 
 <%= render 'form', product: @product %>
 
 <!--%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%#= link_to 'Back', products_path %>
