--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,5 @@
-<br>
-<h1 class="text-3xl text-gary-900 font-bold">New Product</h1>
-<br>
+
+<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">New Product</h1>
 
 <%= render 'form', product: @product %>
 
