--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -34,8 +34,8 @@
     </div>
   </div>
 
-  <div class="mt-10 sm:mt-0">
-    <div class="md:grid md:grid-cols-3 md:gap-6">
+  <div class="p-3 mt-10 sm:mt-0">
+    <div class="md:grid md:grid-cols-5 md:gap-6">
       <div class="md:col-span-1">
         <div class="px-4 sm:px-0">
           <h3 class="text-lg font-medium leading-6 text-gray-900">Product Information</h3>
@@ -44,7 +44,7 @@
           </p-->
         </div>
       </div>
-      <div class="mt-5 md:mt-0 md:col-span-2">
+      <div class="mt-5 md:mt-0 md:col-span-4">
         <!--form action="#" method="POST"-->
           <div class="shadow overflow-hidden sm:rounded-md">
             <div class="px-4 py-5 bg-white sm:p-6">
@@ -61,7 +61,8 @@
 
                 <div class="col-span-6 sm:col-span-3">
                   <%= form.label :brand, "Brand", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.text_field :brand, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+                  <%#= form.text_field :brand, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+                  <%= form.select :brand, Product::BRAND, {}, {class: "mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"} %>
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
@@ -189,7 +190,7 @@
   </div>
 
   <div class="mt-10 sm:mt-0">
-    <div class="md:grid md:grid-cols-3 md:gap-6">
+    <div class="md:grid md:grid-cols-5 md:gap-6">
       <div class="md:col-span-1">
         <div class="px-4 sm:px-0">
           <h3 class="text-lg font-medium leading-6 text-gray-900">Certificates</h3>
@@ -198,7 +199,7 @@
           </p>
         </div>
       </div>
-      <div class="mt-5 md:mt-0 md:col-span-2">
+      <div class="mt-5 md:mt-0 md:col-span-4">
         <!--form action="#" method="POST"-->
           <div class="shadow overflow-hidden sm:rounded-md">
             <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
