--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,22 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
 
-
+  <header class="w-full fixed">
+    <%= render "shared/nav" %>
+    <%= render "shared/flash_notice" %>
+  </header>
 
   <!-- dashboard design -->
-  <body class="flex flex-wrap bg-gray-100 w-full h-screen">
-    
+  <body class="flex flex-wrap bg-gray-50 w-full h-screen">
+
     <!-- only if logined in, show header -->
-    <div class="w-64 bg-white rounded p-3 shadow-lg fixed top-0 bottom-0">
-      <%= render "shared/flash_notice" %>
-      <%= render 'shared/header' %>
+    <div class="w-64 bg-white rounded p-3 shadow-lg fixed top-0 bottom-0 mt-16">
+      
+      <%= render "shared/header" %>
     </div>
 
-    <main class="pl-64 flex-1">
+    <main class="pl-64 flex-1 mt-16">
+      <%#= render "shared/flash_notice" %>
       <%= content_for?(:content) ? yield(:content) : yield %>
     </main>
   </body>
