--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">Products</h1>
+<h1 class="py-2 text-3xl text-gary-900 font-bold">Products</h1>
 
 <!--header class="bg-white shadow">
   <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
@@ -62,9 +62,15 @@
 
 <!--div class="flex flex-col">
   <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"-->
+  <div class="container px-4 bg-white">
+    <div class="py-4 flex items-center">
+      <!--%= text_field_tag :search, params[:search], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-1/4 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Search for..." %-->
+      <!--%= submit_tag "Search", class: "btn inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ml-3" %-->
+      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search product name" title="Type in a name" class="focus:ring-indigo-500 focus:border-indigo-500 block w-1/4 shadow-sm sm:text-sm border-gray-300 rounded-md">
+    </div>
     <div class="align-middle inline-block min-w-full ">
       <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-200">
+        <table id="myTable" class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-50">
             <tr>
               <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -90,7 +96,6 @@
               <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                 Retail Price
               </th>
-
             </tr>
           </thead>
           <tbody class="bg-white divide-y divide-gray-200">
@@ -140,9 +145,30 @@
         </table>
       </div>
     </div>
+  </div>
   <!--/div>
 </div-->
 
+<script>
+function myFunction() {
+  var input, filter, table, tr, td, i, txtValue;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("myTable");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[2];
+    if (td) {
+      txtValue = td.textContent || td.innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }       
+  }
+}
+</script>
 
 <!--
 <table>
